--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swiper": "^11.2.0"
+    "react-tsparticles": "^2.12.2",
+    "swiper": "^11.2.0",
+    "tsparticles": "^3.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
